name:           conduit-merge
version:        0.1.3.0
synopsis:       Merge multiple sorted conduits
description:    See README.md
homepage:       https://github.com/cblp/conduit-merge#readme
license:        BSD3
license-file:   LICENSE
author:         Yuriy Syrovetskiy
maintainer:     cblp@cblp.su
copyright:      2016 Yuriy Syrovetskiy
category:       Conduit
build-type:     Simple
cabal-version:  >= 1.10

source-repository head
    location: https://github.com/cblp/conduit-merge
    type:     git

library
    build-depends:    base >= 4.7 && < 5
                    , conduit >= 1.3 && < 1.4
                    , mtl
    default-language: Haskell2010
    exposed-modules:  Data.Conduit.Merge
    hs-source-dirs:   src

test-suite detect_space_leaks
    build-depends:      base >= 4.7 && < 5
                      , conduit
                      , process
                      , random
                      -- package
                      , conduit-merge
    default-language:   Haskell2010
    ghc-options:        -rtsopts -fprof-auto
    hs-source-dirs:     detect_space_leaks
    main-is:            Main.hs
    type:               exitcode-stdio-1.0
